--- a/Home.html
+++ b/Home.html
@@ -78,6 +78,7 @@
         <label for="endDateInput">End Date & Time:</label>
         <input type="datetime-local" id="endDateInput" class="date-picker">
     </div>
+    <input type="text" id="hhPointName" placeholder="Enter Point Name">
     <button onclick="fetchHHData()">Refresh</button>
     <pre id="getHHData" class="data-container">Waiting for data...</pre>
 </div>
@@ -387,6 +388,11 @@
     }
 
     async function fetchHHData(){
+        const hhPoint = document.getElementById('hhPointName').value;
+        if(hhPoint === ''){
+            getHHData.textContent = "Enter Point Name";
+            return;
+        }
         try{
             const startRaw = document.getElementById("startDateInput").value;
             const endRaw = document.getElementById("endDateInput").value;
@@ -398,8 +404,7 @@
                 return;
             }
 
-            const pointName = "hh:\\Configuration\\TestAPI:HHACStatic";
-            const point = encodeURIComponent("hh:\\Configuration\\TestAPI:HHACStatic");
+            const point = encodeURIComponent(hhPoint);
             const response = await fetch(`https://coe-win11-1/fwxapi/rest/history?pointName=${point}&StartDate=${startDate}&EndDate=${endDate}`,{
                 headers:{'Authorization':'Bearer ' + accessToken}
             });
@@ -428,7 +433,7 @@
                 });
 
                 tableHtml += `</tbody></table>`;
-                getHHData.innerHTML = `<div>Reading Raw Historical Data HTTPS GET: ${pointName} \n\n</div>${tableHtml}`;
+                getHHData.innerHTML = `<div>Reading Raw Historical Data HTTPS GET: ${hhPoint} \n\n</div>${tableHtml}`;
             }else{
                 getHHData.textContent = 'Reading Hyper Historical values (HTTPS GET):\n' + JSON.stringify(data,null,2);
             }
