--- a/Home.html
+++ b/Home.html
@@ -113,7 +113,20 @@
             border: 1px solid var(--border);
             box-shadow: var(--shadow);
             position: relative;
-            overflow: hidden;
+            overflow: auto;
+            max-width: 100%;
+        }
+
+        .data-container table{
+            min-width: 600px;
+            overflow-x: auto;
+            white-space: nowrap;
+        }
+
+        .data-container > p {
+            margin: 0;
+            padding: 1rem;
+            color: var(--text-secondary);
         }
 
         .data-container::before {
@@ -177,6 +190,13 @@
             border-radius: var(--radius);
             overflow: hidden;
             box-shadow: var(--shadow);
+            min-width: 600px;
+        }
+
+        .table-container{
+            overflow-x: auto;
+            max-width: 100%;
+            margin: 1rem 0;
         }
 
         th, td {
@@ -593,12 +613,12 @@
                 });
 
                 tableHtml += `</tbody></table>`;
-                readDataSet.innerHTML = `<div>Reading DataSets HTTPS GET Dynamic Table: \n\n</div>${tableHtml}`;
+                readDataSet.innerHTML = `<div class="table-container">Reading DataSets HTTPS GET Dynamic Table: \n\n</div>${tableHtml}`;
             }else{ //JSON Format 
              readDataSet.textContent = "Reading DataSets HTTPS GET:\n"+ JSON.stringify(result,null,2);
             }
         }catch(err){
-            readDataSet.textContent="ReadDB Error:" + err;
+            readDataSet.textContent=`<p class="error-message">${err}</p>`;
         }
     }
 
